# sb-signing-utils

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.aix  Makefile.aix.v3  Makefile.am  Makefile.in  Makefile.lite  Makefile.v2  README.md  bootstrap.sh  build_all.sh  bulkSign.sh  clean_all.sh  config.h  config.h.aix  config.h.in  config.h.lite  configure  configure.ac  container-utils.c  container.c  container.h  create-container.c  create-software-container.c  crtSignedContainer.sh  dilutils.h  extractdilkey.c  gendilkey.c  gendilsig.c  hashkeys.c  print-container.c  sign-with-imprint.sh  sign-with-local-keys.sh  verifydilsig.c
ccan/endian/: endian.h
config/: rules.mk
docs/: AutomatedSigning.odt
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
scripts/: Makefile.am  SignImage  crtSignedContainer.pl
src/: Makefile.am  Makefile.in
src/signtool/: IBM_CfgFileReader.cpp  IBM_CfgFileReader.h  IBM_CfgManager.cpp  IBM_CfgManager.h  IBM_Container.cpp  IBM_Container.h  IBM_Crypto.cpp  IBM_Crypto.h  IBM_Exception.cpp  IBM_Exception.h  IBM_HexString.h  IBM_SignAgentMessages.cpp  IBM_SignAgentMessages.h  IBM_Socket.cpp  IBM_Socket.h  IBM_Tokenizer.h  IBM_Utils.cpp  IBM_Utils.h  Makefile.am  Makefile.in  signtool.cpp
test/keys/: README.md  extract_pubkeys.sh  gen_keys_hash.sh  hw_keys_hash.md
